experiments/02-mtls-service-mesh-realistic/c2-mtls-namespace/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: realistic-mtls
  labels:
    istio-injection: enabled
