experiments/02-mtls-service-mesh-realistic/c2-mtls-namespace/04-peerauth-strict.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: realistic-mtls
spec:
  mtls:
    mode: STRICT
